--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ruby TOF FairyTail Bot",
+  "name": "GudeBot",
   "version": "1.0.0",
-  "description": "Basic Discord app using interactions",
+  "description": "Bot for private usage",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -15,8 +15,11 @@
   "dependencies": {
     "discord-interactions": "^3.3.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.2.10",
-    "discord.js": "^14.7.0"
+    "node-fetch": "^3.3.0",
+    "discord.js": "^14.7.0",
+    "fs": "^0.0.2",
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^6.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
