--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "GudeBot",
   "version": "1.0.0",
-  "description": "Bot for private usage",
-  "main": "app.js",
-  "type": "module",
+  "description": "Bot for private usage in conjunction with Karuta and some other functionalities for ToF Gaming",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "author": "Kara Tong",
   "license": "MIT",
   "engines": {
     "node": "16.x"
   },
+  "repository": "https://github.com/karatts/TOFRubyBot.git",
   "dependencies": {
     "discord-interactions": "^3.3.0",
     "express": "^4.18.2",
