--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "discord-interactions": "^3.3.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "2.6.6",
     "discord.js": "^14.7.0",
     "fs": "^0.0.2",
     "bufferutil": "^4.0.7",
-    "utf-8-validate": "^6.0.2"
+    "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
